--- a/app/styles/parts/header.styl
+++ b/app/styles/parts/header.styl
@@ -39,7 +39,6 @@ transform-origin()
 
   .navbar
     background-color: $primary-color
-    opacity: 0.9
 
   .navbar--fixed
     bottom: 0
@@ -51,6 +50,9 @@ transform-origin()
   .navbar-item
     font-family: Htowert
     font-size: 1.5em
+    letter-spacing: 0.1em
+    text-transform: uppercase
+    padding: 1em
 
 //  MOBILE AND TABLET:
 @media screen and (max-width: $tablet-end)
